# sts_profile_auth

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  sts_instance.rs
