[package]
name = "sts_profile_auth"
version = "0.5.5"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Authenticate using a profile in your aws credential file when using rusoto"
homepage = "https://github.com/ddboline/sts_profile_auth"
repository = "https://github.com/ddboline/sts_profile_auth"
keywords = ["AWS", "STS"]
readme = "README.md"
exclude = [
    ".github/*",
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = {version = "1.4", default_features = false}
rusoto_core = {version = "0.45", default_features = false, features=["rustls"]}
rusoto_sts = {version = "0.45", default_features = false, features=["rustls"]}
rusoto_credential = {version = "0.45"}
thiserror = "1.0"
dirs = "3.0"

[dev-dependencies]
rusoto_ec2 = {version = "0.45", default_features = false, features=["rustls"]}
tokio = {version="0.2", features=["full"]}
